# raytracer_cpp

./: CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
raytracer_lib/: CMakeLists.txt  color.cpp  color.h  cube.cpp  cube.h  envmap.cpp  envmap.h  intersect.cpp  intersect.h  light.cpp  light.h  material.cpp  material.h  plane.cpp  plane.h  ray.cpp  ray.h  shape.h  sphere.cpp  sphere.h  texture.cpp  texture.h  vector3.cpp  vector3.h  writer.cpp  writer.h
src/: Project.cpp  main.cpp  phong.cpp
